# superstructure

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CHANGES.md  MANIFEST.in  NOTES.md  README.md  development_notes.md  main.py  pickled_data  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests  setup.cfg  setup.py  things_to_remember.md  toward_superstructure.md  tox.ini
.github/: dependabot.yml
.github/workflows/: auto-pr.yml  linting-and-testing.yml  publish-to-test-pypi.yml  publish-to-testpypi.yml  pytest.yml  test.yml
metastructure/: README.md  __init__.py  layout.py
superstructure/: README.md  __init__.py  cli.py  core.py  forms.py  geist.py  grundbegriffe.py  logik.py  utils.py
superstructure/hyperstructure/: README.md  __init__.py  vernunft.py
superstructure/infrastructure/: README.md  __init__.py  logo.py
superstructure/infrastructure/cli/: __init.py  commands.py  utils.py
superstructure/infrastructure/storage/: __init.py  pickled.py  redis.py
superstructure/metastructure/: README.md  __init__.py  core.py  form.py  forms.py  geist.py  grundbegriffe.py  logik.py  utils.py
superstructure/restructure/: README.md
superstructure/singletons/: README.md  __init__.py  an_sich.py  utils.py
tests/: __init__.py  test_bewusstsein.py  test_core.py  test_geist.py  test_hyperstructure.py  test_infrastructure.py  test_logik.py  test_metastructure.py  test_superstructure.py
tests/fixtures/: pickled_data
